force-app/main/default/objects/GroundTravelEnrgyUse/GroundTravelEnrgyUse.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>