force-app/main/default/objects/GroundTravelEnrgyUse/fields/Billable_Vs_Non_Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable_Vs_Non_Billable__c</fullName>
    <description>SB: Created for NZC Implementation &quot;&quot;, This field is created for Scope 3 Data upload</description>
    <label>Billable Vs Non Billable</label>
    <length>18</length>
    <type>Text</type>
</CustomField>