force-app/main/default/objects/GroundTravelEnrgyUse/fields/Client_Facing__c.field-meta.xml
<CustomField>
    <fullName>Client_Facing__c</fullName>
    <description>SB: Created for NZC Implementation &quot;&quot;, This field is created for Scope 3 Data upload</description>
    <label>Client Facing</label>
    <type>TextArea</type>
</CustomField>