force-app/main/default/objects/GroundTravelEnrgyUse/fields/Grade_Code__c.field-meta.xml
<CustomField>
    <fullName>Grade_Code__c</fullName>
    <description>SB: Created for NZC Implementation &quot;&quot;, This field is created for Scope 3 Data upload</description>
    <label>Grade Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>