force-app/main/default/objects/GroundTravelEnrgyUse/fields/Ground_Travel_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Ground_Travel_External_ID__c</fullName>
    <description>RRD: Created for NZC Implementation PhII_UC007_US02, Purpose: This Field is used to store the External id</description>
    <externalId>true</externalId>
    <label>Ground Travel  External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>