force-app/main/default/objects/GroundTravelEnrgyUse/fields/International__c.field-meta.xml
<CustomField>
    <fullName>International__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SB: Created for NZC Implementation &quot; &quot;. This field is created for Scope 3 Data upload</description>
    <label>International</label>
    <type>Checkbox</type>
</CustomField>