force-app/main/default/objects/GroundTravelEnrgyUse/fields/NZC_GT_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>NZC_GT_Auto_Number__c</fullName>
    <description>HA: NZC auto number field which will be copied to external id field.</description>
    <displayFormat>GT-{00000}</displayFormat>
    <label>NZC GT Auto Number</label>
    <type>AutoNumber</type>
</CustomField>