force-app/main/default/objects/GroundTravelEnrgyUse/fields/Origin_City__c.field-meta.xml
<CustomField>
    <fullName>Origin_City__c</fullName>
    <description>SB: Created for NZC Implementation &quot; &quot;, This field is created for Scope 3 Data upload</description>
    <label>Origin City</label>
    <length>18</length>
    <type>Text</type>
</CustomField>