force-app/main/default/objects/GroundTravelEnrgyUse/fields/Purpose_of_Trip__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Trip__c</fullName>
    <description>SB: Created for NZC Implementation &quot;&quot;, This field is created for Scope 3 Data upload</description>
    <label>Purpose of Trip</label>
    <type>TextArea</type>
</CustomField>