force-app/main/default/objects/GroundTravelEnrgyUse/fields/Trip_Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Trip_Project_Code__c</fullName>
    <description>SB: Created for NZC Implementation &quot;&quot;, This field is created for Scope 3 Data upload</description>
    <label>Trip Project Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>