force-app/main/default/objects/GroundTravelEnrgyUse/validationRules/NZC_Restrict_Ground_Travel_EF.validationRule-meta.xml
<ValidationRule>
    <fullName>NZC_Restrict_Ground_Travel_EF</fullName>
    <active>true</active>
    <description>Venkat: Created as part of NZC Phase 2 Implementation
Purpose: To Restrict the user to populate the Ground Travel Emission Factor</description>
    <errorConditionFormula>NOT( ISBLANK(GroundTravelEmssnFctrId) )</errorConditionFormula>
    <errorMessage>Please remove the Ground Travel Emission Factor</errorMessage>
</ValidationRule>