force-app/main/default/objects/GroundTravelEnrgyUse/listViews/All_GroundTravelEnrgyUse.listView-meta.xml
<ListView>
    <fullName>All_GroundTravelEnrgyUse</fullName>
    <columns>Name</columns>
    <columns>ExpenseType</columns>
    <columns>TripCost</columns>
    <columns>TravelerName</columns>
    <columns>CurrencyCode</columns>
    <columns>Distance</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>StartDate</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2024</value>
    </filters>
    <filters>
        <field>EndDate</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2024</value>
    </filters>
    <label>All Ground Travel Energy Use</label>
</ListView>